--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1,6 +1,8 @@
 {
-    "ACTOR.TypeCharacter": "Player Character",
-    "ACTOR.TypeNpc": "No-Player Character",
-    "ITEM.TypeSpell": "Spell",
-    "ITEM.TypeWeapon": "Weapon"
+    "TWITCHCHAT.TwitchChannel": "Twitch Channel",
+    "TWITCHCHAT.TwitchChannelHint": "The name of the Twitch channel to connect to.",
+    "TWITCHCHAT.TwitchUsername": "Twitch Username",
+    "TWITCHCHAT.TwitchUsernameHint": "The username of the Twitch account to connect with.",
+    "TWITCHCHAT.TwitchOAuthToken": "Twitch OAuth Token",
+    "TWITCHCHAT.TwitchOAuthTokenHint": "The OAuth token of the Twitch account to connect with."
 }
