feat: add foundry user selection

--- a/lang/en.yml
+++ b/lang/en.yml
@@ -4,3 +4,5 @@ TWITCHCHAT.TwitchUsername: "Twitch Username"
 TWITCHCHAT.TwitchUsernameHint: "The username of the Twitch account to connect with."
 TWITCHCHAT.TwitchOAuthToken: "Twitch OAuth Token"
 TWITCHCHAT.TwitchOAuthTokenHint: "The OAuth token of the Twitch account to connect with."
+TWITCHCHAT.FoundryUser: "Foundry User"
+TWITCHCHAT.FoundryUserHint: "The Foundry user to receive/send Twitch messages."
