feat: add /twitch command to send mensagem

--- a/lang/en.yml
+++ b/lang/en.yml
@@ -6,3 +6,4 @@ TWITCHCHAT.TwitchOAuthToken: "Twitch OAuth Token"
 TWITCHCHAT.TwitchOAuthTokenHint: "The OAuth token of the Twitch account to connect with."
 TWITCHCHAT.FoundryUser: "Foundry User"
 TWITCHCHAT.FoundryUserHint: "The Foundry user to receive/send Twitch messages."
+TWITCHCHAT.ChatCommandSendMsgToTwitch: "Send message to Twitch"
