--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -6,5 +6,6 @@
     "TWITCHCHAT.TwitchOAuthToken": "Twitch OAuth Token",
     "TWITCHCHAT.TwitchOAuthTokenHint": "The OAuth token of the Twitch account to connect with.",
     "TWITCHCHAT.FoundryUser": "Foundry User",
-    "TWITCHCHAT.FoundryUserHint": "The Foundry user to receive/send Twitch messages."
+    "TWITCHCHAT.FoundryUserHint": "The Foundry user to receive/send Twitch messages.",
+    "TWITCHCHAT.ChatCommandSendMsgToTwitch": "Send message to Twitch"
 }
