feat: change twitch emotes to be optional

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -7,5 +7,7 @@
     "TWITCHCHAT.TwitchOAuthTokenHint": "The OAuth token of the Twitch account to connect with.",
     "TWITCHCHAT.FoundryUser": "Foundry User",
     "TWITCHCHAT.FoundryUserHint": "The Foundry user to receive/send Twitch messages.",
-    "TWITCHCHAT.ChatCommandSendMsgToTwitch": "Send message to Twitch"
+    "TWITCHCHAT.ChatCommandSendMsgToTwitch": "Send message to Twitch",
+    "TWITCHCHAT.ShowTwitchEmotes": "Show Twitch Emotes",
+    "TWITCHCHAT.ShowTwitchEmotesHint": "Show Twitch emotes in chat messages."
 }
