--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -13,5 +13,7 @@
     "TWITCHCHAT.MessageStyle": "Twitch Message Style",
     "TWITCHCHAT.MessageStyleHint": "The style of show Twitch messages in Foundry chat",
     "TWITCHCHAT.MessageStyleUsernameAsAlias": "Username as Alias",
-    "TWITCHCHAT.MessageStyleUsernameAsFlavor": "Username as Flavor"
+    "TWITCHCHAT.MessageStyleUsernameAsFlavor": "Username as Flavor",
+    "TWITCHCHAT.MessageBorderColor": "Message Border Color",
+    "TWITCHCHAT.MessageBorderColorHint": "The border color of Twitch messages in Foundry chat"
 }
